done with live page and twitter tab

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -19,11 +19,20 @@
       <div id="twitch" class="tab-content active">
     	</div>
     	<div id="twitter" class="tab-content">
+        <a class="twitter-timeline"
+          href="https://twitter.com/monsieursapin_"
+          data-lang="fr"
+          data-width="100%"
+          data-height="auto"
+          data-link-color="#6f9e5a"
+          data-chrome="noheader noscrollbar nofooter transparent noborders">
+        </a>
     	</div>
     	<div id="website" class="tab-content">
     	</div>
     </div>
     <script src="/js/jquery.js"></script>
+    <script src="/js/twitter.js"></script>
     <script src="/js/popup.js"></script>
   </body>
 </html>
