--- a/popup/popuplive.html
+++ b/popup/popuplive.html
@@ -6,15 +6,38 @@
   </head>
   <body>
     <div class="header">
-      <h1>Tchïn</h1>
-      <p>on twitch</p>
-      <div class="live">Live !</div>
+      <div class="banner"></div>
+      <div class="nav">
+        <div class="tabs">
+          <div id="twitch-tab" class="tab-link active" data-tab="twitch">Twitch<span class="live-dot"></span></div>
+          <div class="tab-link" data-tab="twitter">Twitter</div>
+          <div class="tab-link" data-tab="website">Site Web</div>
+        </div>
+      </div>
     </div>
     <div class="content">
-      <a id="twitch" href="https://twitch.tv/tchinontwitch">Twitch</a>
-      <a id="scheduler" href="https://tchinontwitch.herokuapp.com">Raid scheduler</a>
+      <div class="live">
+        <p>Monsieur Sapin est LIVE !</p>
+        <a href="https://www.twitch.tv/monsieursapin">GO GO !!!</a>
+      </div>
+      <div id="twitch" class="tab-content active">
+
+    	</div>
+    	<div id="twitter" class="tab-content">
+        <a class="twitter-timeline"
+          href="https://twitter.com/monsieursapin_"
+          data-lang="fr"
+          data-width="100%"
+          data-height="auto"
+          data-link-color="#6f9e5a"
+          data-chrome="noheader noscrollbar nofooter transparent noborders">
+        </a>
+    	</div>
+    	<div id="website" class="tab-content">
+    	</div>
     </div>
     <script src="/js/jquery.js"></script>
+    <script src="/js/twitter.js"></script>
     <script src="/js/popup.js"></script>
   </body>
 </html>
