done with website tab

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -23,16 +23,19 @@
           href="https://twitter.com/monsieursapin_"
           data-lang="fr"
           data-width="100%"
-          data-height="auto"
+          data-height="600"
           data-link-color="#6f9e5a"
           data-chrome="noheader noscrollbar nofooter transparent noborders">
         </a>
     	</div>
     	<div id="website" class="tab-content">
+
     	</div>
     </div>
     <script src="/js/jquery.js"></script>
     <script src="/js/twitter.js"></script>
     <script src="/js/popup.js"></script>
+    <script src="/js/website_feed.js"></script>
+    <script src="/js/twitch_vods.js"></script>
   </body>
 </html>
