--- a/popup/popuplive.html
+++ b/popup/popuplive.html
@@ -39,5 +39,7 @@
     <script src="/js/jquery.js"></script>
     <script src="/js/twitter.js"></script>
     <script src="/js/popup.js"></script>
+    <script src="/js/website_feed.js"></script>
+    <script src="/js/twitch_vods.js"></script>
   </body>
 </html>
