--- a/popup/popup.html
+++ b/popup/popup.html
@@ -28,13 +28,11 @@
           data-chrome="noheader noscrollbar nofooter transparent noborders">
         </a>
     	</div>
-    	<div id="website" class="tab-content">
-
-    	</div>
+    	<div id="website" class="tab-content"></div>
     </div>
     <script src="/js/jquery.js"></script>
-    <script src="/js/twitter.js"></script>
     <script src="/js/popup.js"></script>
+    <script src="/js/twitter.js"></script>
     <script src="/js/website_feed.js"></script>
     <script src="/js/twitch_vods.js"></script>
   </body>
