--- a/popup/popuplive.html
+++ b/popup/popuplive.html
@@ -9,20 +9,14 @@
       <div class="banner"></div>
       <div class="nav">
         <div class="tabs">
-          <div id="twitch-tab" class="tab-link active" data-tab="twitch">Twitch<span class="live-dot"></span></div>
+          <div id="twitch-tab" class="tab-link active" data-tab="twitch">Twitch<span id="live-dot"></span></div>
           <div class="tab-link" data-tab="twitter">Twitter</div>
           <div class="tab-link" data-tab="website">Site Web</div>
         </div>
       </div>
     </div>
     <div class="content">
-      <div class="live">
-        <p>Monsieur Sapin est LIVE !</p>
-        <a href="https://www.twitch.tv/monsieursapin">GO GO !!!</a>
-      </div>
-      <div id="twitch" class="tab-content active">
-
-    	</div>
+      <div id="twitch" class="tab-content active"></div>
     	<div id="twitter" class="tab-content">
         <a class="twitter-timeline"
           href="https://twitter.com/monsieursapin_"
@@ -33,8 +27,7 @@
           data-chrome="noheader noscrollbar nofooter transparent noborders">
         </a>
     	</div>
-    	<div id="website" class="tab-content">
-    	</div>
+    	<div id="website" class="tab-content"></div>
     </div>
     <script src="/js/jquery.js"></script>
     <script src="/js/twitter.js"></script>
