--- a/popup/popup.html
+++ b/popup/popup.html
@@ -9,21 +9,20 @@
       <div class="banner"></div>
       <div class="nav">
         <div class="tabs">
-          <div class="tab-link active" data-tab="twitch">Twitch</div>
-          <div class="tab-link" data-tab="twitter">Twitter</div>
-          <div class="tab-link" data-tab="website">Site Web</div>
+          <div class="tab-link active" data-tab="twitch">TWITCH</div>
+          <div class="tab-link" data-tab="twitter">TWITTER</div>
+          <div class="tab-link" data-tab="website">SITE WEB</div>
         </div>
       </div>
     </div>
     <div class="content">
-      <div id="twitch" class="tab-content active">
-    	</div>
+      <div id="twitch" class="tab-content active"></div>
     	<div id="twitter" class="tab-content">
         <a class="twitter-timeline"
           href="https://twitter.com/monsieursapin_"
           data-lang="fr"
           data-width="100%"
-          data-height="600"
+          data-height="auto"
           data-link-color="#6f9e5a"
           data-chrome="noheader noscrollbar nofooter transparent noborders">
         </a>
