prepare for es6 refacto

--- a/popup/popuplive.html
+++ b/popup/popuplive.html
@@ -9,9 +9,9 @@
       <div class="banner"></div>
       <div class="nav">
         <div class="tabs">
-          <div id="twitch-tab" class="tab-link active" data-tab="twitch">Twitch<span id="live-dot"></span></div>
-          <div class="tab-link" data-tab="twitter">Twitter</div>
-          <div class="tab-link" data-tab="website">Site Web</div>
+          <div id="twitch-tab" class="tab-link active" data-tab="twitch" data-stream-type="live">TWITCH<span id="live-dot"></span></div>
+          <div class="tab-link" data-tab="twitter">TWITTER</div>
+          <div class="tab-link" data-tab="website">SITE WEB</div>
         </div>
       </div>
     </div>
