--- a/popup/popupvod.html
+++ b/popup/popupvod.html
@@ -9,7 +9,7 @@
       <div class="banner"></div>
       <div class="nav">
         <div class="tabs">
-          <div class="tab-link active" id="twitch-tab" data-tab="twitch">TWITCH</div>
+          <div id="twitch-tab" class="tab-link active" data-tab="twitch" data-stream-type="vod">TWITCH<span id="live-dot"></span></div>
           <div class="tab-link" data-tab="twitter">TWITTER</div>
           <div class="tab-link" data-tab="website">SITE WEB</div>
         </div>
