--- a/popup.html
+++ b/popup.html
@@ -29,10 +29,6 @@
     	</div>
     	<div id="website" class="tab-content"></div>
     </div>
-    <script src="/js/jquery.js"></script>
-    <script src="/js/twitter.js"></script>
-    <script src="/js/website_feed.js"></script>
-    <script src="/js/twitch_vods.js"></script>
-    <script src="/js/popup.js"></script>
+    <script src="./build/bundle.js"></script>
   </body>
 </html>
