--- a/src/popup/popup_live.html
+++ b/src/popup/popup_live.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/src/css/style.css">
   </head>
   <body>
     <div class="header">
