removed unnecessary crap, twitch clips tab working as intended

--- a/src/popup.html
+++ b/src/popup.html
@@ -16,6 +16,7 @@
       </div>
     </div>
     <div class="content">
+      <div id="btn"><a href="https://www.twitch.tv/monsieursapin">Accéder à la chaîne</a></div>
       <div id="twitch" class="tab-content active"></div>
     	<div id="twitter" class="tab-content">
         <a class="twitter-timeline"
@@ -29,6 +30,6 @@
     	</div>
     	<div id="website" class="tab-content"></div>
     </div>
-    <script src="./build/bundle.js"></script>
+    <script src="../src/index.js"></script>
   </body>
 </html>
