--- a/src/popup_vod.html
+++ b/src/popup_vod.html
@@ -9,7 +9,7 @@
       <div class="banner"></div>
       <div class="nav">
         <div class="tabs">
-          <div id="twitch-tab" class="tab-link active" data-tab="twitch" data-stream-type="live">TWITCH<span id="live-dot"></span></div>
+          <div id="twitch-tab" class="tab-link active" data-tab="twitch" data-stream-type="vod">TWITCH<span id="live-dot"></span></div>
           <div class="tab-link" data-tab="twitter">TWITTER</div>
           <div class="tab-link" data-tab="website">SITE WEB</div>
         </div>
@@ -29,10 +29,6 @@
     	</div>
     	<div id="website" class="tab-content"></div>
     </div>
-    <script src="/js/jquery.js"></script>
-    <script src="/js/twitter.js"></script>
-    <script src="/js/website_feed.js"></script>
-    <script src="/js/twitch_vods.js"></script>
-    <script src="/js/popup.js"></script>
+    <script src="../src/index.js"></script>
   </body>
 </html>
