--- a/src/popup.html
+++ b/src/popup.html
@@ -9,15 +9,16 @@
       <div class="banner"></div>
       <div class="nav">
         <div class="tabs">
-          <div class="tab-link active" id="twitch-tab" data-tab="twitch">TWITCH</div>
+          <div class="tab-link active" id="twitch-tab" data-tab="twitch">CLIPS TWITCH</div>
+          <div class="tab-link" data-tab="website">YOUTUBE</div>
           <div class="tab-link" data-tab="twitter">TWITTER</div>
-          <div class="tab-link" data-tab="website">SITE WEB</div>
         </div>
       </div>
     </div>
     <div class="content">
       <div id="btn"><a href="https://www.twitch.tv/monsieursapin">Accéder à la chaîne</a></div>
       <div id="twitch" class="tab-content active"></div>
+      <div id="youtube" class="tab-content"></div>
     	<div id="twitter" class="tab-content">
         <a class="twitter-timeline"
           href="https://twitter.com/monsieursapin_"
@@ -28,7 +29,6 @@
           data-chrome="noheader noscrollbar nofooter transparent noborders">
         </a>
     	</div>
-    	<div id="website" class="tab-content"></div>
     </div>
     <script src="../src/index.js"></script>
   </body>
