--- a/src/popup_vod.html
+++ b/src/popup_vod.html
@@ -10,13 +10,14 @@
       <div class="nav">
         <div class="tabs">
           <div id="twitch-tab" class="tab-link active" data-tab="twitch" data-stream-type="vod">TWITCH<span id="live-dot"></span></div>
+          <div class="tab-link" data-tab="youtube">YOUTUBE</div>
           <div class="tab-link" data-tab="twitter">TWITTER</div>
-          <div class="tab-link" data-tab="website">SITE WEB</div>
         </div>
       </div>
     </div>
     <div class="content">
       <div id="twitch" class="tab-content active"></div>
+      <div id="youtube" class="tab-content"></div>
     	<div id="twitter" class="tab-content">
         <a class="twitter-timeline"
           href="https://twitter.com/monsieursapin_"
@@ -27,7 +28,6 @@
           data-chrome="noheader noscrollbar nofooter transparent noborders">
         </a>
     	</div>
-    	<div id="website" class="tab-content"></div>
     </div>
     <script src="../src/index.js"></script>
   </body>
