--- a/src/popup_live.html
+++ b/src/popup_live.html
@@ -29,7 +29,7 @@
           </div>
         </div>
       </div>
-      <div id="YOUTUBE" class="tab-content"></div>
+      <div id="youtbe" class="tab-content"></div>
     	<div id="twitter" class="tab-content">
         <a class="twitter-timeline"
           href="https://twitter.com/monsieursapin_"
