--- a/src/popup.html
+++ b/src/popup.html
@@ -9,14 +9,15 @@
       <div class="banner"></div>
       <div class="nav">
         <div class="tabs">
-          <div class="tab-link active" id="twitch-tab" data-tab="twitch">CLIPS TWITCH</div>
-          <div class="tab-link" data-tab="website">YOUTUBE</div>
+          <div class="tab-link active" data-tab="twitch">CLIPS TWITCH</div>
+          <div class="tab-link" data-tab="youtube">YOUTUBE</div>
           <div class="tab-link" data-tab="twitter">TWITTER</div>
         </div>
       </div>
     </div>
     <div class="content">
-      <div id="btn"><a href="https://www.twitch.tv/monsieursapin">Accéder à la chaîne</a></div>
+      <div id="btn-twitch" class="btn active"><a href="https://www.twitch.tv/monsieursapin">Accéder à la chaîne</a></div>
+      <div id="btn-youtube" class="btn"><a href="https://www.youtube.com/monsieursapin">Accéder à la chaine youtube !</a></div>
       <div id="twitch" class="tab-content active"></div>
       <div id="youtube" class="tab-content"></div>
     	<div id="twitter" class="tab-content">
