--- a/src/popup_vod.html
+++ b/src/popup_vod.html
@@ -9,13 +9,15 @@
       <div class="banner"></div>
       <div class="nav">
         <div class="tabs">
-          <div id="twitch-tab" class="tab-link active" data-tab="twitch" data-stream-type="vod">TWITCH<span id="live-dot"></span></div>
+          <div class="tab-link active" data-tab="twitch">TWITCH</div>
           <div class="tab-link" data-tab="youtube">YOUTUBE</div>
           <div class="tab-link" data-tab="twitter">TWITTER</div>
         </div>
       </div>
     </div>
     <div class="content">
+      <div id="btn-twitch" class="btn active"><a href="https://www.twitch.tv/monsieursapin">Monsieur sapin à lancé une VOD !</a></div>
+      <div id="btn-youtube" class="btn"><a href="https://www.youtube.com/monsieursapin">Accéder à la chaine youtube !</a></div>
       <div id="twitch" class="tab-content active"></div>
       <div id="youtube" class="tab-content"></div>
     	<div id="twitter" class="tab-content">
