--- a/src/popup_live.html
+++ b/src/popup_live.html
@@ -9,26 +9,16 @@
       <div class="banner"></div>
       <div class="nav">
         <div class="tabs">
-          <div id="twitch-tab" class="tab-link active" data-tab="twitch" data-stream-type="live">CLIPS TWITCH</div>
-          <div class="tab-link" data-tab="website">YOUTUBE</div>
+          <div class="tab-link active" data-tab="twitch">CLIPS TWITCH</div>
+          <div class="tab-link" data-tab="youtube">YOUTUBE</div>
           <div class="tab-link" data-tab="twitter">TWITTER</div>
         </div>
       </div>
     </div>
     <div class="content">
-      <div id="twitch" class="tab-content active">
-        <div class="twitch-card" style="background-image: url('https://clips-media-assets.twitch.tv/186034442-preview-480x272.jpg')">
-          <div class="twitch-card-infos">
-            <div class="twitch-card-infos-title">
-              elle est où?! aaaaaaaaaaaaaaksjhflisfmiushefmiusfmisuhefmisufmsieuhfmsufhmseibfb
-            </div>
-            <div class="twitch-card-infos-author">
-              <div class="author-avatar" style="background-image: url('https://static-cdn.jtvnw.net/jtv_user_pictures/a9e0194e-daed-4a0d-a20f-3224c89ce593-profile_image-150x150.jpg')"></div>
-              <div class="author-name">Thanathos22</div>
-            </div>
-          </div>
-        </div>
-      </div>
+      <div id="btn-twitch" class="btn active"><a href="https://www.twitch.tv/monsieursapin">Monsieur sapin est en live !</a></div>
+      <div id="btn-youtube" class="btn"><a href="https://www.youtube.com/monsieursapin">Accéder à la chaine youtube !</a></div>
+      <div id="twitch" class="tab-content active"></div>
       <div id="youtbe" class="tab-content"></div>
     	<div id="twitter" class="tab-content">
         <a class="twitter-timeline"
