twitter tab working, buttons working

--- a/src/popup_live.html
+++ b/src/popup_live.html
@@ -16,16 +16,16 @@
       </div>
     </div>
     <div class="content">
-      <div id="btn-twitch" class="btn active"><a href="https://www.twitch.tv/monsieursapin">Monsieur sapin est en live !</a></div>
-      <div id="btn-youtube" class="btn"><a href="https://www.youtube.com/monsieursapin">Accéder à la chaine youtube !</a></div>
+      <div id="twitch-btn" class="btn active"><a href="https://www.twitch.tv/monsieursapin">Monsieur sapin est en live !</a></div>
+      <div id="youtube-btn" class="btn"><a href="https://www.youtube.com/monsieursapin">Accéder à la chaine youtube !</a></div>
       <div id="twitch" class="tab-content active"></div>
-      <div id="youtbe" class="tab-content"></div>
+      <div id="youtube" class="tab-content"></div>
     	<div id="twitter" class="tab-content">
         <a class="twitter-timeline"
           href="https://twitter.com/monsieursapin_"
           data-lang="fr"
           data-width="100%"
-          data-height="auto"
+          data-height="100%"
           data-link-color="#6f9e5a"
           data-chrome="noheader noscrollbar nofooter transparent noborders">
         </a>
