--- a/src/popup_vod.html
+++ b/src/popup_vod.html
@@ -9,15 +9,15 @@
       <div class="banner"></div>
       <div class="nav">
         <div class="tabs">
-          <div class="tab-link active" data-tab="twitch">TWITCH</div>
+          <div class="tab-link active" data-tab="twitch">CLIPS TWITCH</div>
           <div class="tab-link" data-tab="youtube">YOUTUBE</div>
           <div class="tab-link" data-tab="twitter">TWITTER</div>
         </div>
       </div>
     </div>
     <div class="content">
-      <div id="btn-twitch" class="btn active"><a href="https://www.twitch.tv/monsieursapin">Monsieur sapin à lancé une VOD !</a></div>
-      <div id="btn-youtube" class="btn"><a href="https://www.youtube.com/monsieursapin">Accéder à la chaine youtube !</a></div>
+      <div id="twitch-btn" class="btn active"><a href="https://www.twitch.tv/monsieursapin">Monsieur sapin à lancé une VOD !</a></div>
+      <div id="youtube-btn" class="btn"><a href="https://www.youtube.com/monsieursapin">Accéder à la chaine youtube !</a></div>
       <div id="twitch" class="tab-content active"></div>
       <div id="youtube" class="tab-content"></div>
     	<div id="twitter" class="tab-content">
@@ -25,7 +25,7 @@
           href="https://twitter.com/monsieursapin_"
           data-lang="fr"
           data-width="100%"
-          data-height="auto"
+          data-height="100%"
           data-link-color="#6f9e5a"
           data-chrome="noheader noscrollbar nofooter transparent noborders">
         </a>
