youtube video display ok

--- a/src/popup.html
+++ b/src/popup.html
@@ -31,6 +31,7 @@
         </a>
     	</div>
     </div>
+    <script src="../src/js/jquery.js"></script>
     <script src="../src/index.js"></script>
   </body>
 </html>
