--- a/src/popup_vod.html
+++ b/src/popup_vod.html
@@ -22,7 +22,7 @@
       <div id="youtube" class="tab-content"></div>
     	<div id="twitter" class="tab-content">
         <a class="twitter-timeline"
-          href="https://twitter.com/monsieursapin_"
+          href="https://twitter.com/monsieursapin_?ref_src=twsrc%5Etfw"
           data-lang="fr"
           data-width="100%"
           data-height="100%"
@@ -31,6 +31,7 @@
         </a>
     	</div>
     </div>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <script src="../src/index.js"></script>
   </body>
 </html>
