hide easter egg

--- a/src/popup.html
+++ b/src/popup.html
@@ -6,7 +6,12 @@
   </head>
   <body>
     <div class="header">
-      <div class="banner"></div>
+      <div class="banner">
+        <div id="fretille"></div>
+        <audio>
+          <source src="../src/audio/easter_egg_fretille.mp3" type="audio/mpeg">
+        </audio>
+      </div>
       <div class="nav">
         <div class="tabs">
           <div class="tab-link active" data-tab="twitch">CLIPS TWITCH</div>
