fixed youtube link

--- a/src/popup.html
+++ b/src/popup.html
@@ -11,4 +11,5 @@
     </noscript>
     <div id="root"></div>
   </body>
+  <script type="text/javascript" src="popup.bundle.js"></script></body>
 </html>
